--- a/src/index.css
+++ b/src/index.css
@@ -221,12 +221,33 @@ h1 {
   color: #1f1a09;
 }
 
+.button:disabled {
+  background-color: #ffc404;
+  border: 1px solid #ffc404;
+  cursor: default;
+  color: grey;
+}
+
 .text-button {
   font: inherit;
   cursor: pointer;
   background-color: transparent;
   border: none;
   color: #ffc404;
+}
+
+.text-clear-button {
+  font: inherit;
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+  border-radius: 4px;
+  color: red;
+}
+
+.text-clear-button:disabled {
+  cursor: default;
+  color: grey;
 }
 
 .text-button:hover,
