--- a/src/index.css
+++ b/src/index.css
@@ -117,6 +117,13 @@ h1 {
   padding: 0;
 }
 
+.orders-actions {
+  margin-top: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .modal-actions {
   display: flex;
   justify-content: flex-end;
@@ -241,7 +248,6 @@ h1 {
   cursor: pointer;
   background-color: transparent;
   border: none;
-  border-radius: 4px;
   color: red;
 }
 
@@ -318,6 +324,29 @@ h1 {
 .table-header-item {
   text-align: left;
   padding-bottom: 1rem;
+}
+
+.navigation button {
+  font: inherit;
+  cursor: pointer;
+  background-color: #ffc404;
+  border: 1px solid #ffc404;
+  color: #1f1a09;
+  border-radius: 50%;
+}
+
+.navigation button:hover,
+.navigation button:active {
+  background-color: #ffab04;
+  border-color: #ffab04;
+  color: #1f1a09;
+}
+
+.navigation button:disabled {
+  background-color: #ffc404;
+  border: 1px solid #ffc404;
+  cursor: default;
+  color: grey;
 }
 
 @keyframes fade-slide-up {
